movenc: fix assert failure caused by rounding.

Fixes Ticket1820

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>